# sysinfo

./: .clang-format  CMakeLists.txt  LICENSE  README.md
cmake/: CompilerOptions.cmake  wormsysinfoConfig.cmake
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  NetlinkSocket.cpp  NetlinkSocketError.cpp  errno_error.cpp  types.cpp
src/include/wormhole/sysinfo/: NetlinkSocket.hpp  NetlinkSocketError.hpp  errno_error.hpp  helper.hpp  types.hpp
